<resources>
    <string name="app_name">MyStoryyApp</string>
    <string name="title_home">Home</string>
    <string name="title_addstory">Add Story</string>
    <string name="title_profile">Profile</string>
    <string name="nameapp">Aestory</string>
    <string name="started">Get Started</string>
    <string name="message_welcome_page">Your journey begins here, where every moment becomes a story worth telling.</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data</string>
    <string name="title_login_page">Ready to start your story journey?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome to Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Log Out</string>
    <string name="todo">TODO</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="new_story">New Story</string>
    <string name="deskripsi">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="story">Story</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desk_1">Stories That Connect Us All</string>
    <string name="desktam_1">Your unique story deserves to be shared. Discover new inspiration, build emotional connections, and let your world be part of ours.</string>
    <string name="desk2">Explore A World Full of Stories</string>
    <string name="des2">Every story has meaning. Start your own and find inspiration from thousands of other stories here.</string>
    <string name="SignUp">Don\'t have an account? Sign up</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="password_length_error">Password must be at least 8 characters</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="name_empty_error">Name cannot be empty</string>
    <string name="signup_success">Signup successful! Please login.</string>
    <string name="email_invalid_error">Invalid email format</string>
    <string name="example_name">name@example.com</string>
    <string name="logged_out">Logged out</string>
    <string name="lainnya">More</string>
    <string name="example_com">example.com</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="mode_gelap">Dark Mode</string>
    <string name="ubah_bahasa">Change Language</string>
    <string name="language_changed">Language changed successfully.</string>
    <string name="failed_fetch_profile">Failed to fetch profile. Please try again.</string>
    <string name="user_not_logged_in">User is not logged in. Please log in first.</string>
    <string name="logout_successful">You have successfully logged out.</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesian</string>
    <string name="pengaturan">Settings</string>
    <string name="notoken">Token not found</string>
    <string name="empty_image_warning">Please upload an image file first.</string>
    <string name="notlogin">You are not logged in</string>
    <string name="username">Username</string>
    <string name="invalid_email_error">Invalid email format.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">Text is unavailable</string>
    <string name="description_required">Description is required</string>
    <string name="no_data_available">No Data Available</string>
    <string name="title_location">Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="story_name">Story Name</string>
    <string name="story_id">Story ID</string>
    <string name="lokasi">Add Location</string>
    <string name="data_loaded_success">Data loaded successfully</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="location_enabled">Location enabled</string>
    <string name="location_disabled">Location disabled</string>
    <string name="error_fetching_data">Failed to fetch data from the server.</string>
    <string name="no_location_found">No story locations found.</string>
    <string name="pratinjau_peta">Map Fragment Preview</string>

</resources>
